--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^6.0.0",
+    "@angular/cdk": "^6.3.2",
     "@angular/cli": "~6.0.1",
     "@angular/common": "^6.0.0",
     "@angular/compiler": "^6.0.0",
@@ -24,6 +25,7 @@
     "@angular/core": "^6.0.0",
     "@angular/forms": "^6.0.0",
     "@angular/http": "^6.0.0",
+    "@angular/material": "^6.3.2",
     "@angular/platform-browser": "^6.0.0",
     "@angular/platform-browser-dynamic": "^6.0.0",
     "@angular/router": "^6.0.0",
